kubernetes/immich/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-postgres
  namespace: homelab
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: immich-postgres
  template:
    metadata:
      labels:
        app: immich-postgres
    spec:
      containers:
      - name: postgres
        image: tensorchord/pgvecto-rs:pg14-v0.2.0
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: data
        hostPath:
          path: /var/lib/k8s/immich-db
---
apiVersion: v1
kind: Service
metadata:
  name: immich-postgres
  namespace: homelab
spec:
  selector:
    app: immich-postgres
  ports:
  - port: 5432
    targetPort: 5432
