kubernetes/immich/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-redis
  namespace: homelab
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: immich-redis
  template:
    metadata:
      labels:
        app: immich-redis
    spec:
      containers:
      - name: redis
        image: redis:6.2-alpine
---
apiVersion: v1
kind: Service
metadata:
  name: immich-redis
  namespace: homelab
spec:
  selector:
    app: immich-redis
  ports:
  - port: 6379
    targetPort: 6379
